<?xml version="1.0"?>
<package>
  <name>rviz_pics</name>
  <version>0.0.0</version>
  <description>Display satellite map tiles in Rviz</description>
  <author>Markus Lamprecht</author>
  <maintainer email="markuslamprecht@live.de">Markus Lamprecht</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geodesy</build_depend> <!-- sudo apt-get install ros-kinetic-geodesy -->

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geodesy</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
